css/style.css
.center {
    text-align: center;
}

.table-centered {
    margin: 0 auto;
    float: none;
}

.table-min {
    width: auto;
}

#username {
    float: left;
}

#settings {
    padding-left: 10px;
    float: right;
}

.navbar-brand {
    color: #31708f;
}

